Fuck contrast, fix manifest

--- a/css/main.css
+++ b/css/main.css
@@ -25,8 +25,8 @@ h1, h2, h3, h4, h5, h6 {
 h1 { margin-bottom: 1em; }
 p { margin: 1em 0; }
 
-a, a:visited         { color: #A70701; }
-a:hover, a:active, a:focus   { color: #AC0701; }
+a, a:visited         { color: #fe524c; }
+a:hover, a:active, a:focus   { color: #FF847C; }
 
 img {
   max-width: 100%;
@@ -49,12 +49,12 @@ img {
 }
 
 .posts span {
-  color: #946D05;
+  color: #fac84c;
   font-size: .5em;
   text-transform: uppercase;
   background: #fff;
   padding: .1em .5em;
-  border-bottom: 1px solid #946D05;
+  border-bottom: 1px solid #fac84c;
   float: left;
 }
 
@@ -94,12 +94,12 @@ img {
 }
 
 .site p.meta {
-  color: #946D05;
+  color: #fac84c;
   text-transform: uppercase;
   background: #fff;
   padding: .1em .5em;
   display: inline-block;
-  border-bottom: 1px solid #946D05;
+  border-bottom: 1px solid #fac84c;
 }
 
 .post, .posts {
@@ -160,7 +160,7 @@ img {
 /* standard */
 .post pre {
   border-top: #255a6d 5px solid;
-  background-color: #26594E;
+  background-color: #76c3b3;
   color: #fff;
   padding: 0 .4em;
 }
@@ -177,7 +177,7 @@ img {
 
 .post code {
   border-top: #255a6d 5px solid;
-  background-color: #26594E;
+  background-color: #76c3b3;
   color: #fff;
   padding: 0 .2em;
 }
@@ -209,7 +209,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Amatic SC', cursive;
-  color: #26594E;
+  color: #76c3b3;
 }
 
 body, caption, th, td, input, textarea, select, option, legend, fieldset, h1, h2, h3, h4, h5, h6 {
